<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/activity_configuracao_toolbar_cabecalho"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentLeft="true"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:weightSum="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_configuracao_edit_ip_servidor"
                android:hint="@string/ip_servidor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_configuracao_edit_ip_servidor_webservice"
                android:layout_gravity="center_horizontal"
                android:hint="@string/ip_servidor_webservice" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/activity_configuracao_edit_porta_servidor"
                android:hint="@string/porta_servidor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_configuracao_edit_caminho_banco_dados"
                android:hint="@string/caminho_banco_dados" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_configuracao_edit_usuario_servidor"
                android:inputType="textCapCharacters"
                android:hint="@string/usuario_servidor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/activity_configuracao_edit_senha_usuario_servidor"
                android:hint="@string/senha_usuario_servidor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_configuracao_edit_certificado"
                android:hint="@string/certificado" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/activity_configuracao_edit_codigo_empresa"
                android:hint="@string/codigo_empresa" />

            <RadioGroup
                android:id="@+id/activity_configuracao_radio_group_tipo_conexao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/activity_cadastro_radioButton_modo_ativo"
                android:gravity="left"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conexao_interna"
                    android:id="@+id/activity_configuracao_radioButton_conexao_interna"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conexao_webservice"
                    android:id="@+id/activity_configuracao_radioButton_conexao_webservice"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conexao_ftp"
                    android:id="@+id/activity_configuracao_radioButton_conexao_ftp"
                    android:checked="false" />

            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.67">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/casas_decimais"
                    android:id="@+id/textView6"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/limite_dias_conferir"
                    android:id="@+id/textView7"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.67">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/activity_configuracao_edit_casas_decimais"
                    android:hint="@string/casas_decimais"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/activity_configuracao_edit_limite_dias_conferir"
                    android:layout_weight="1"
                    android:hint="@string/limite_dias_conferir" />

            </LinearLayout>

            <Button
                android:id="@+id/activity_configuracao_button_tamanho_fonte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/tamanho_texto"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>