<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_login_toolbar_cabecalho"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentLeft="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@mipmap/plano_fundo"
        android:layout_below="@+id/activity_login_toolbar_cabecalho"
        android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/branco" >

        <EditText
            android:id="@+id/activity_login_edit_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textCapCharacters"
            android:background="@color/branco"
            android:hint="@string/usuario"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAllCaps="true">
            <requestFocus/>
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/branco"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/activity_login_edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:background="@color/branco"
            android:textAppearance="?android:attr/textAppearanceLarge" />

   </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_login_progressBar_status"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:indeterminate="true"
            android:visibility="invisible" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/activity_login_button_entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/preto"
            android:text="@string/entrar"
            android:textColor="@color/branco"
            android:textStyle="bold"
            android:typeface="normal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:gravity="center_horizontal"
            android:textColor="@color/branco"
            android:textStyle="bold"
            android:textSize="45dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sistema_auxiliar_gerenciamento_armazem"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/branco"
            android:gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_login_toolbar_rodape"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentLeft="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>